--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
 
 <body>
     <div class="header">
+        <img class="logo" src="images/company_logo_white.png" alt="Header logo">
+        <ul>
+            <li><a href="http://www.google.com">header link one</a></li>
+            <li><a href="http://www.google.com">header link two</a></li>
+            <li><a href="http://www.google.com">header link three</a></li>
+        </ul>
 
     </div>
 
