rough in first content block

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Landing Page</title>
+    <title>Rockin' Socks</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
     <div class="header">
         <img class="logo" src="images/company_logo_white.png" alt="Header logo">
-        <ul>
+        <ul class="top_links">
             <li><a href="http://www.google.com">header link one</a></li>
             <li><a href="http://www.google.com">header link two</a></li>
             <li><a href="http://www.google.com">header link three</a></li>
@@ -20,7 +20,14 @@
 
     </div>
 
-    <div class="content">
+    <div class="content1">
+        <div class="left_1">
+            <div class="title_text">This website is awesome</div>
+            <div class="small_text">This website has some smaller text that goes here under the title. It's a smaller font and the color is lower contrast.</div>
+            <button class="sign_up">Sign up</button>
+        </div>
+
+        <img class="hanging_socks" src="images/drying_socks.jpg">
 
     </div>
 
