rough in second content box

--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
     <div class="header">
         <img class="logo" src="images/company_logo_white.png" alt="Header logo">
         <ul class="top_links">
-            <li><a href="http://www.google.com">header link one</a></li>
-            <li><a href="http://www.google.com">header link two</a></li>
-            <li><a href="http://www.google.com">header link three</a></li>
+            <li><a href="http://www.google.com">shop</a></li>
+            <li><a href="http://www.google.com">about</a></li>
+            <li><a href="http://www.google.com">contact us</a></li>
         </ul>
 
     </div>
 
     <div class="content1">
         <div class="left_1">
-            <div class="title_text">This website is awesome</div>
+            <div class="title_text">Your one-stop sock shop</div>
             <div class="small_text">This website has some smaller text that goes here under the title. It's a smaller font and the color is lower contrast.</div>
             <button class="sign_up">Sign up</button>
         </div>
@@ -31,8 +31,26 @@
 
     </div>
 
-    <div class="content">
-
+    <div class="content2">
+        <div class="cont2_top_text">Some random information</div>
+        <div class="gallery">
+            <div class="gal_box">
+                <img class="gal_image" src="images/gallery_sock.jpg">
+                <div class="gal_text">Some random text under an image</div>
+            </div>
+            <div class="gal_box">
+                <img class="gal_image" src="images/gallery_sock.jpg">
+                <div class="gal_text">Some random text under an image</div>
+            </div>
+            <div class="gal_box">
+                <img class="gal_image" src="images/gallery_sock.jpg">
+                <div class="gal_text">Some random text under an image</div>
+            </div>
+            <div class="gal_box">
+                <img class="gal_image" src="images/gallery_sock.jpg">
+                <div class="gal_text">Some random text under an image</div>
+            </div>
+        </div>
     </div>
     
     <div class="content">
