rough in third content block

--- a/index.html
+++ b/index.html
@@ -53,7 +53,13 @@
         </div>
     </div>
     
-    <div class="content">
+    <div class="content3">
+        <div class="quote_text">
+            One can never have enough socks. Another Christmas has come and gone and I didn't get a single pair. People will insist on giving me books.
+        </div>
+        <div class="attribution_text">
+            -Dumbledore, Headmaster of Hogwarts
+        </div>
 
     </div>
 
