rough in fourth content box

--- a/index.html
+++ b/index.html
@@ -60,10 +60,20 @@
         <div class="attribution_text">
             -Dumbledore, Headmaster of Hogwarts
         </div>
-
     </div>
 
-    <div class="content">
+    <div class="content4">
+        <div class="c2a_box">
+            <div class="c2a_left">
+                <div class="c2a_title">
+                    Call to action! It's time!
+                </div>
+                <div class="c2a_text">
+                    Sign up for our hourly sock newsletter!
+                </div>
+            </div>
+            <button class="c2a_button">Sign up</button>
+        </div>
 
     </div>
 
