rough in footer

--- a/index.html
+++ b/index.html
@@ -78,6 +78,9 @@
     </div>
 
     <div class="footer">
+        <div class="footer_text">
+            Copyright © Jesse Reffsin 2021
+        </div>
 
     </div>
     
