--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="header">
-        <img class="logo" src="images/company_logo_white.png" alt="Header logo">
+        <img class="logo" src="images/new_logo.png" alt="Header logo">
         <ul class="top_links">
             <li><a href="http://www.google.com">shop</a></li>
             <li><a href="http://www.google.com">about</a></li>
@@ -23,7 +23,7 @@
     <div class="content1">
         <div class="left_1">
             <div class="title_text">Your one-stop sock shop</div>
-            <div class="small_text">This website has some smaller text that goes here under the title. It's a smaller font and the color is lower contrast.</div>
+            <div class="small_text">If you need some socks, you've come to the right place! Heck, even if you don't need any socks, you've still come to the right place! If you're ambivalent about needing socks, this may not be the place for you.</div>
             <button class="sign_up">Sign up</button>
         </div>
 
@@ -32,23 +32,23 @@
     </div>
 
     <div class="content2">
-        <div class="cont2_top_text">Some random information</div>
+        <div class="cont2_top_text">Some random photos of socks!</div>
         <div class="gallery">
             <div class="gal_box">
                 <img class="gal_image" src="images/gallery_sock.jpg">
-                <div class="gal_text">Some random text under an image</div>
+                <div class="gal_text">Here are some socks, aren't they nice?</div>
             </div>
             <div class="gal_box">
-                <img class="gal_image" src="images/gallery_sock.jpg">
-                <div class="gal_text">Some random text under an image</div>
+                <img class="gal_image" src="images/sockswithboots.jpg">
+                <div class="gal_text">These are more socks but slightly to the right.</div>
             </div>
             <div class="gal_box">
-                <img class="gal_image" src="images/gallery_sock.jpg">
-                <div class="gal_text">Some random text under an image</div>
+                <img class="gal_image" src="images/heartsocks.jpg">
+                <div class="gal_text">Black and white socks, because why not!</div>
             </div>
             <div class="gal_box">
-                <img class="gal_image" src="images/gallery_sock.jpg">
-                <div class="gal_text">Some random text under an image</div>
+                <img class="gal_image" src="images/polkadotsocks.jpg">
+                <div class="gal_text">How about we look at socks one last time?</div>
             </div>
         </div>
     </div>
@@ -66,7 +66,7 @@
         <div class="c2a_box">
             <div class="c2a_left">
                 <div class="c2a_title">
-                    Call to action! It's time!
+                    Want more sock content?!
                 </div>
                 <div class="c2a_text">
                     Sign up for our hourly sock newsletter!
